--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ title: Miles Herr, Tenor
 	</div>
 	<div>
 		<div class="row">
-		   	<div class="column">
+			<div class="column">
 				<div class="row">
 					<div class="column mini">
 						<div style="margin: 5%;">
@@ -80,9 +80,10 @@ title: Miles Herr, Tenor
 								<div class="shadowBox">
 									<img class="imageFadeWText" src="https://leemlb06pmi.github.io/photos/Cosi_2.jpeg" alt="Cosi">
 									<div class="textTrans">
-									<p>Ferrando in Mozart's <em>Cos&#236 fan tutte </em><br>Fargo-Moorhead Opera 2019</p>
+										<p>Ferrando in Mozart's <em>Cos&#236 fan tutte </em><br>Fargo-Moorhead Opera 2019</p>
+									</div>
 								</div>
-							</div>				       
+							</div>
 						</div>
 					</div>
 					<div class="column mini">
@@ -91,23 +92,26 @@ title: Miles Herr, Tenor
 								<div class="shadowBox">
 									<img class="imageFadeWText" src="https://leemlb06pmi.github.io/photos/Lucretia_1_GeoffSheill.jpeg" alt="Lucretia">
 									<div class="textTrans">
-									<p>Male Chorus in Britten's <em>The Rape of Lucretia</em><br>Maryland Opera Studio 2016, photo by Geoff Sheil</p>
+										<p>Male Chorus in Britten's <em>The Rape of Lucretia</em><br>Maryland Opera Studio 2016, photo by Geoff Sheil</p>
+									</div>
 								</div>
-							</div>				       
+							</div>
 						</div>
-					</div>	
+					</div>
 					<div class="column mini">
 						<div style="margin: 5%;">
 							<div class="picContainActive">
 								<div class="shadowBox">
 									<img class="imageFadeWText" src="https://leemlb06pmi.github.io/photos/Orpheus_5_GeoffSheill.jpeg" alt="Orphee">
 									<div class="textTrans">
-									Orph&#233e in Offenbach's <em>Orph&#233e aux enfers </em><br>Maryland Opera Studio 2017, photo by Geoff Sheil</p>
+										<p>Orph&#233e in Offenbach's <em>Orph&#233e aux enfers </em><br>Maryland Opera Studio 2017, photo by Geoff Sheil</p>
+									</div>
 								</div>
-							</div>				       
+							</div>
 						</div>
 					</div>
 				</div>
+			</div>
 			<div class="column"><p>right side</p></div>
 		</div>
 	</div>
