--- a/index.html
+++ b/index.html
@@ -30,42 +30,37 @@ title: Miles Herr, Tenor
 			</div>
 		</div>
 	</div>
-	<div>
-		<div class="row">
-			<div class="column 65left">
-				<div style="margin 2.5% 5% 2.5% 5%;">
-					<p style="text-align:left;margin:5% 5% 2.5% 5%;">Tenor Miles Herr, from Lenox, Massachusetts, is a graduate of the Maryland Opera Studio.  
+	<div class="row">
+		<div class="column 65left">
+			<div style="margin 2.5% 5% 2.5% 5%;">
+				<p style="text-align:left;margin:5% 5% 2.5% 5%;">Tenor Miles Herr, from Lenox, Massachusetts, is a graduate of the Maryland Opera Studio.  
 			His operatic credits include Ramiro (<em>La Cenerentola</em>), Ferrando (<em>Così fan tutte</em>), and Le Remendado (<em>Carmen</em>) with 
 			Fargo-Moorhead Opera, Bardolfo (<em>Falstaff</em>) with Crested Butte Music Festival, Stevie and Professor 
 			Scoot (<em>The Cradle will Rock</em>) with Opera Saratoga, Pluton and Orphée (<em>Orphée aux Enfers</em>), 
 			Male Chorus (<em>The Rape of Lucretia</em>) with the Marlyand Opera Studio, and Gastone (<em>La Traviata</em>) with Ash 
 			Lawn Opera. While a member of the Maryland Opera Studio, Mr. Herr took part in two consecutive iterations of the annual New 
 			Work Reading where he premiered two new operatic works: <em>The Young King</em> by Martin Hennessy and <em>Another Country</em> by Michael Oberhauser. 
-					</p>
-					<p style="text-align:left;margin:2.5% 5% 2.5% 5%;">As a concert soloist, Mr. Herr has performed Handel’s Messiah with a number of groups, 
+				</p>
+				<p style="text-align:left;margin:2.5% 5% 2.5% 5%;">As a concert soloist, Mr. Herr has performed Handel’s Messiah with a number of groups, 
 						including Calvary Baptist Church (Washington, D.C.), The Cary Community Choir, and Chapel Hill University Baptist Church.  
 						He also performed a pair of concerts with the UNC Baroque Ensemble under the bow of Dr. Brent Wissick. 
-					</p>
-					<p style="text-align:left;margin:2.5% 5% 2.5% 5%;">Miles is an alumnus of young artist programs at 
+				</p>
+				<p style="text-align:left;margin:2.5% 5% 2.5% 5%;">Miles is an alumnus of young artist programs at 
 						Opera Delaware, Teatro Nuovo, Fargo-Moorhead Opera, Crested Butte Opera Studio, and Opera Saratoga. 
 						He has performed on master classes with many accomplished artists and teachers including Marlena Malas, 
 						Anthony Dean Griffey, and Angela Brown. Mr. Herr currently studies with Gran Wilson.
-					</p>
-				</div>
+				</p>
 			</div>
-			<div class="column 35right">
-				<div style="margin: 5% 0% 2.5% 0%;">
-					<div class="picContainActive">
-						<div class="shadowBox">
-							<img class="imageFadeWText" src="https://leemlb06pmi.github.io/photos/Cradle_1.jpeg" alt="Stevie">
-							<div class="textTrans">
-								<p>Stevie in Blitzstein's <em>The Cradle Will Rock</em>
-								<br>
-								Opera Saratoga 2017, photo by Gary David Gold
-								</p>
-							</div>
-						</div>				       
-					</div>
+		</div>
+		<div class="column 35right">
+			<div style="margin: 5% 0% 2.5% 0%;">
+				<div class="picContainActive">
+					<div class="shadowBox">
+						<img class="imageFadeWText" src="https://leemlb06pmi.github.io/photos/Cradle_1.jpeg" alt="Stevie">
+						<div class="textTrans">
+							<p>Stevie in Blitzstein's <em>The Cradle Will Rock</em><br>Opera Saratoga 2017, photo by Gary David Gold</p>
+						</div>
+					</div>				       
 				</div>
 			</div>
 		</div>
@@ -73,37 +68,31 @@ title: Miles Herr, Tenor
 	<div>
 		<div class="row">
 			<div class="column mini">
-				<div>
-					<div class="picContainActive">
-						<div class="shadowBox">
-							<img class="imageFadeWText" src="https://leemlb06pmi.github.io/photos/Cosi_2.jpeg" alt="Cosi">
-							<div class="textTrans">
-								<p>Ferrando in Mozart's <em>Cos&#236 fan tutte </em><br>Fargo-Moorhead Opera 2019</p>
-							</div>
+				<div class="picContainActive">
+					<div class="shadowBox">
+						<img class="imageFadeWText" src="https://leemlb06pmi.github.io/photos/Cosi_2.jpeg" alt="Cosi">
+						<div class="textTrans">
+							<p>Ferrando in Mozart's <em>Cos&#236 fan tutte </em><br>Fargo-Moorhead Opera 2019</p>
 						</div>
 					</div>
 				</div>
 			</div>
 			<div class="column mini">
-				<div>
-					<div class="picContainActive">
-						<div class="shadowBox">
-							<img class="imageFadeWText" src="https://leemlb06pmi.github.io/photos/Lucretia_1_GeoffSheil.jpeg" alt="Lucretia">
-								<div class="textTrans">
-									<p>Male Chorus in Britten's <em>The Rape of Lucretia</em><br>Maryland Opera Studio 2016, photo by Geoff Sheil</p>
-								</div>
+				<div class="picContainActive">
+					<div class="shadowBox">
+						<img class="imageFadeWText" src="https://leemlb06pmi.github.io/photos/Lucretia_1_GeoffSheil.jpeg" alt="Lucretia">
+							<div class="textTrans">
+								<p>Male Chorus in Britten's <em>The Rape of Lucretia</em><br>Maryland Opera Studio 2016, photo by Geoff Sheil</p>
 							</div>
 						</div>
 					</div>
 				</div>
 			<div class="column mini">
-				<div>
-					<div class="picContainActive">
-						<div class="shadowBox">
-							<img class="imageFadeWText" src="https://leemlb06pmi.github.io/photos/Orpheus_5_GeoffSheil.jpeg" alt="Orphee">
-								<div class="textTrans">
-									<p>Orph&#233e in Offenbach's <em>Orph&#233e aux enfers </em><br>Maryland Opera Studio 2017, photo by Geoff Sheil</p>
-								</div>
+				<div class="picContainActive">
+					<div class="shadowBox">
+						<img class="imageFadeWText" src="https://leemlb06pmi.github.io/photos/Orpheus_5_GeoffSheil.jpeg" alt="Orphee">
+							<div class="textTrans">
+								<p>Orph&#233e in Offenbach's <em>Orph&#233e aux enfers </em><br>Maryland Opera Studio 2017, photo by Geoff Sheil</p>
 							</div>
 						</div>
 					</div>
