--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ title: Miles Herr, Tenor
 	</div>
 	<div class="row">
 		<div class="column mini">
-			<div class="picContainActive">
+			<div class="picContainActive2">
 				<div class="shadowBox">
 					<img class="imageFadeWText" src="https://leemlb06pmi.github.io/photos/Cosi_2.jpeg" alt="Cosi">
 					<div class="textTrans">
@@ -77,7 +77,7 @@ title: Miles Herr, Tenor
 			</div>
 		</div>
 		<div class="column mini">
-			<div class="picContainActive">
+			<div class="picContainActive2">
 				<div class="shadowBox">
 					<img class="imageFadeWText" src="https://leemlb06pmi.github.io/photos/Lucretia_1_GeoffSheil.jpeg" alt="Lucretia">
 						<div class="textTrans">
@@ -87,7 +87,7 @@ title: Miles Herr, Tenor
 				</div>
 			</div>
 		<div class="column mini">
-			<div class="picContainActive">
+			<div class="picContainActive2">
 				<div class="shadowBox">
 					<img class="imageFadeWText" src="https://leemlb06pmi.github.io/photos/Orpheus_5_GeoffSheil.jpeg" alt="Orphee">
 						<div class="textTrans">
