--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ title: Miles Herr, Tenor
 					<div class="shadowBox">
 						<img class="imageFadeWText" src="https://leemlb06pmi.github.io/photos/Cradle_1.jpeg" alt="Stevie">
 						<div class="textTrans">
-							<p>Stevie in Blitzstein's <em>The Cradle Will Rock</em><br>Opera Saratoga 2017, photo by Gary David Gold</p>
+							<p style="font-size:1em;">Stevie in Blitzstein's <em>The Cradle Will Rock</em><br>Opera Saratoga 2017, photo by Gary David Gold</p>
 						</div>
 					</div>				       
 				</div>
@@ -71,7 +71,7 @@ title: Miles Herr, Tenor
 				<div class="shadowBox">
 					<img class="imageFadeWText" src="https://leemlb06pmi.github.io/photos/Cosi_2.jpeg" alt="Cosi">
 					<div class="textTrans">
-						<p>Ferrando in Mozart's <em>Cos&#236 fan tutte </em><br>Fargo-Moorhead Opera 2019</p>
+						<p style="font-size:1em;">Ferrando in Mozart's <em>Cos&#236 fan tutte </em><br>Fargo-Moorhead Opera 2019</p>
 					</div>
 				</div>
 			</div>
@@ -81,7 +81,7 @@ title: Miles Herr, Tenor
 				<div class="shadowBox">
 					<img class="imageFadeWText" src="https://leemlb06pmi.github.io/photos/Lucretia_1_GeoffSheil.jpeg" alt="Lucretia">
 						<div class="textTrans">
-							<p>Male Chorus in Britten's <em>The Rape of Lucretia</em><br>Maryland Opera Studio 2016, photo by Geoff Sheil</p>
+							<p style="font-size:1em;">Male Chorus in Britten's <em>The Rape of Lucretia</em><br>Maryland Opera Studio 2016, photo by Geoff Sheil</p>
 						</div>
 					</div>
 				</div>
