--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ title: Miles Herr, Tenor
 				<div class="shadowBox">
 					<img class="imageFadeWText" src="https://leemlb06pmi.github.io/photos/Orpheus_5_GeoffSheil.jpeg" alt="Orphee">
 						<div class="textTrans">
-							<p>Orph&#233e in Offenbach's <em>Orph&#233e aux enfers </em><br>Maryland Opera Studio 2017, photo by Geoff Sheil</p>
+							<p style="font-size:1em;">Orph&#233e in Offenbach's <em>Orph&#233e aux enfers </em><br>Maryland Opera Studio 2017, photo by Geoff Sheil</p>
 						</div>
 					</div>
 				</div>
