--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@ title: Miles Herr, Tenor
 			<div style="margin: 5% 0% 2.5% 0%;">
 				<div class="picContainActive">
 					<div class="shadowBox">
-						<img class="imageFadeWText" src="https://leemlb06pmi.github.io/photos/Cradle_1.jpeg" alt="Stevie">
+						<img class="imageFadeWText" src="https://leemlb06pmi.github.io/photos/Cenerentola.jpeg" alt="Stevie">
 						<div class="textTrans">
-							<p style="font-size:1em;">Stevie in Blitzstein's <em>The Cradle Will Rock</em><br>Opera Saratoga 2017, photo by Gary David Gold</p>
+							<p style="font-size:1em;">Ramiro in Rossini's <em>La Cenerentola</em><br>Fargo-Moorhead Opera 2022</p>
 						</div>
 					</div>				       
 				</div>
@@ -89,9 +89,9 @@ title: Miles Herr, Tenor
 		<div class="column mini">
 			<div class="picContainActive2">
 				<div class="shadowBox">
-					<img class="imageFadeWText" src="https://leemlb06pmi.github.io/photos/Orpheus_5_GeoffSheil.jpeg" alt="Orphee">
+					<img class="imageFadeWText" src="https://leemlb06pmi.github.io/photos/Cradle_1.jpeg" alt="Orphee">
 						<div class="textTrans">
-							<p style="font-size:1em;">Orph&#233e in Offenbach's <em>Orph&#233e aux enfers</em><br>Maryland Opera Studio 2017, photo by Geoff Sheil</p>
+							<p style="font-size:1em;">Stevie in Blitzstein's <em>The Cradle Will Rock</em><br>Opera Saratoga 2017, photo by Gary David Gold</p>
 						</div>
 					</div>
 				</div>
