--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ title: Miles Herr, Tenor
 			<div style="margin: 5% 0% 2.5% 0%;">
 				<div class="picContainActive">
 					<div class="shadowBox">
-						<img class="imageFadeWText" src="https://leemlb06pmi.github.io/photos/Cenerentola.jpeg" alt="Stevie">
+						<img class="imageFadeWText" src="https://leemlb06pmi.github.io/photos/Cenerentola.jpg" alt="Stevie">
 						<div class="textTrans">
 							<p style="font-size:1em;">Ramiro in Rossini's <em>La Cenerentola</em><br>Fargo-Moorhead Opera 2022</p>
 						</div>
@@ -79,21 +79,21 @@ title: Miles Herr, Tenor
 		<div class="column mini">
 			<div class="picContainActive2">
 				<div class="shadowBox">
-					<img class="imageFadeWText" src="https://leemlb06pmi.github.io/photos/Lucretia_1_GeoffSheil.jpeg" alt="Lucretia">
-						<div class="textTrans">
-							<p style="font-size:1em;">Male Chorus in Britten's <em>The Rape of Lucretia</em><br>Maryland Opera Studio 2016, photo by Geoff Sheil</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		<div class="column mini">
-			<div class="picContainActive2">
-				<div class="shadowBox">
 					<img class="imageFadeWText" src="https://leemlb06pmi.github.io/photos/Cradle_1.jpeg" alt="Orphee">
 						<div class="textTrans">
 							<p style="font-size:1em;">Stevie in Blitzstein's <em>The Cradle Will Rock</em><br>Opera Saratoga 2017, photo by Gary David Gold</p>
 						</div>
 					</div>
+				</div>
+			</div>
+		</div>
+		<div class="column mini">
+			<div class="picContainActive2">
+				<div class="shadowBox">
+					<img class="imageFadeWText" src="https://leemlb06pmi.github.io/photos/Lucretia_1_GeoffSheil.jpeg" alt="Lucretia">
+						<div class="textTrans">
+							<p style="font-size:1em;">Male Chorus in Britten's <em>The Rape of Lucretia</em><br>Maryland Opera Studio 2016, photo by Geoff Sheil</p>
+						</div>
 				</div>
 			</div>
 		</div>
