--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ title: Miles Herr, Tenor
 					<a href="/photos/Miles Herr Resume.pdf" download class="button b2"><span>Resume</span></a>
 				</div>
 				<div class="column mini">
-					<a href="https://www.youtube.com/channel/UCxxJHB4j4ZTPNabK6ZG3rFg" class="button b3"><span>Media</span></a>
+					<a href="https://www.youtube.com/channel/UCxxJHB4j4ZTPNabK6ZG3rFg" target"_blank" class="button b3"><span>Media</span></a>
 				</div>
 			</div>
 		</div>
@@ -56,7 +56,7 @@ title: Miles Herr, Tenor
 			<div style="margin: 5% 0% 2.5% 0%;">
 				<div class="picContainActive">
 					<div class="shadowBox">
-						<img class="imageFadeWText" src="https://leemlb06pmi.github.io/photos/Cenerentola.jpg" alt="Stevie">
+						<img class="imageFadeWText" src="https://leemlb06pmi.github.io/photos/Cenerentola.jpg" alt="Ramiro">
 						<div class="textTrans">
 							<p style="font-size:1em;">Ramiro in Rossini's <em>La Cenerentola</em><br>Fargo-Moorhead Opera 2022</p>
 						</div>
