--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@ title: Miles Herr, Tenor
 		<div class = "column right" >
 			<blockquote class="home_oppo">	
 				<h3>Upcoming Engagements</h3>
-				<p style="display:inline-block; max-width:95%; padding:5%;">Check back soon for updates!!</p>
+				<p style="display:inline-block; max-width:95%; padding:5%;">I'm excited to accounce that I'll be joinging Sarasota Opera as a Studio artist in 2023 
+					where I'll be performing the roles of Goro in Puccini's <em>Madama Butterfly</em> and First Officer in Massenet's <em>Thérèse</em>.</p>
 			</blockquote>
 			<div class="row">
 				<div class="column mini">
