--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@ title: Miles Herr, Tenor
 		<div class = "column right" >
 			<blockquote class="home_oppo">	
 				<h3>Upcoming Engagements</h3>
-				<p style="display:inline-block; max-width:95%; padding:5%;">I'm excited to accounce that I'll be joinging Sarasota Opera as a Studio artist in 2023 
-					where I'll be performing the roles of Goro in Puccini's <em>Madama Butterfly</em> and First Officer in Massenet's <em>Thérèse</em>.</p>
+				<p style="display:inline-block; max-width:95%; padding:5%;">I'm excited to accounce that I'll be joinging Bel Cantanti Opera to 
+					sing Ramiro in Rossini's <em>La Cenerentola</em>.</p>
 			</blockquote>
 			<div class="row">
 				<div class="column mini">
 					<a href="mailto:miles@finexus.com" class="button b1"><span>Contact</span></a>	
 				</div>
 				<div class="column mini">
-					<a href="/photos/Miles Herr Resume.pdf" download class="button b2"><span>Resume</span></a>
+					<a href="/photos/Miles Herr Resume.pdf" target="_blank" class="button b2"><span>Resume</span></a>
 				</div>
 				<div class="column mini">
 					<a href="https://www.youtube.com/channel/UCxxJHB4j4ZTPNabK6ZG3rFg" target="_blank" class="button b3"><span>Media</span></a>
