--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@ title: Miles Herr, Tenor
 		<div class = "column left">
 			<div class="picContain">
 				<div class="shadowBox" style="margin:5% 0% 0% 5%; border-radius:0% 10% 10% 0%;">
-					<img class="home" src="https://leemlb06pmi.github.io/photos/Headshot.jpg" alt="Headshot">
-					<div class="bottomCenterHead">photo by Laura Toraldo</div>
+					<img class="home" src="https://leemlb06pmi.github.io/photos/Headshot.jpeg" alt="Headshot">
 				</div>
 			</div>
 		</div>
