--- a/index.html
+++ b/index.html
@@ -34,21 +34,21 @@ title: Miles Herr, Tenor
 		<div class="column 65left">
 			<div style="margin 2.5% 5% 2.5% 5%;">
 				<p style="text-align:left;margin:5% 5% 2.5% 5%;">Tenor Miles Herr, from Lenox, Massachusetts, is a graduate of the Maryland Opera Studio.  
-			His operatic credits include Ramiro (<em>La Cenerentola</em>), Ferrando (<em>Così fan tutte</em>), and Le Remendado (<em>Carmen</em>) with 
+			His operatic credits include Ramiro (<em>La Cenerentola</em>) with Bel Cantanti Opera, Goro (<em>Madama Butterfly</em>) 
+			and First Officer (<em>Thérèse</em>) with Sarasota Opera, Ramiro, Ferrando (<em>Così fan tutte</em>), and Le Remendado (<em>Carmen</em>) with 
 			Fargo-Moorhead Opera, Bardolfo (<em>Falstaff</em>) with Crested Butte Music Festival, Stevie and Professor 
 			Scoot (<em>The Cradle will Rock</em>) with Opera Saratoga, Pluton and Orphée (<em>Orphée aux Enfers</em>), 
 			Male Chorus (<em>The Rape of Lucretia</em>) with the Marlyand Opera Studio, and Gastone (<em>La Traviata</em>) with Ash 
-			Lawn Opera. While a member of the Maryland Opera Studio, Mr. Herr took part in two consecutive iterations of the annual New 
-			Work Reading where he premiered two new operatic works: <em>The Young King</em> by Martin Hennessy and <em>Another Country</em> by Michael Oberhauser. 
+			Lawn Opera. 
 				</p>
 				<p style="text-align:left;margin:2.5% 5% 2.5% 5%;">As a concert soloist, Mr. Herr has performed Handel’s Messiah with a number of groups, 
-						including Calvary Baptist Church (Washington, D.C.), The Cary Community Choir, and Chapel Hill University Baptist Church.  
-						He also performed a pair of concerts with the UNC Baroque Ensemble under the bow of Dr. Brent Wissick. 
+			including Calvary Baptist Church (Washington, D.C.), The Cary Community Choir, and Chapel Hill University Baptist Church.  
+			He also performed a pair of concerts with the UNC Baroque Ensemble under the bow of Dr. Brent Wissick. 
 				</p>
 				<p style="text-align:left;margin:2.5% 5% 2.5% 5%;">Miles is an alumnus of young artist programs at 
-						Opera Delaware, Teatro Nuovo, Fargo-Moorhead Opera, Crested Butte Opera Studio, and Opera Saratoga. 
-						He has performed on master classes with many accomplished artists and teachers including Marlena Malas, 
-						Anthony Dean Griffey, and Angela Brown. Mr. Herr currently studies with Gran Wilson.
+			Sarasota Opera, Opera Delaware, Teatro Nuovo, Fargo-Moorhead Opera, Crested Butte Opera Studio, and Opera Saratoga. 
+			He has performed on master classes with many accomplished artists and teachers including Marlena Malas, 
+			Anthony Dean Griffey, and Angela Brown. Mr. Herr currently studies with Gran Wilson.
 				</p>
 			</div>
 		</div>
