--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@ title: Miles Herr, Tenor
 		<div class = "column right" >
 			<blockquote class="home_oppo">	
 				<h3>Upcoming Engagements</h3>
-				<p style="display:inline-block; max-width:95%; padding:5%;">I'm excited to accounce that I'll be joinging Bel Cantanti Opera to 
-					sing Ramiro in Rossini's <em>La Cenerentola</em>.</p>
+				<p style="display:inline-block; max-width:95%; padding:5%;">Check back soon for more updates!</p>
 			</blockquote>
 			<div class="row">
 				<div class="column mini">
