--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ title: Miles Herr, Tenor
 		<div class="column 65left">
 			<div style="margin 2.5% 5% 2.5% 5%;">
 				<p style="text-align:left;margin:5% 5% 2.5% 5%;">Tenor Miles Herr, from Lenox, Massachusetts, is a graduate of the Maryland Opera Studio.  
-			His operatic credits include Ramiro (<em>La Cenerentola</em>) with Bel Cantanti Opera, Goro (<em>Madama Butterfly</em>) 
+			His operatic credits include Oronte (<em>Alcina</em>) with St. Pete Opera, Ramiro (<em>La Cenerentola</em>) with Bel Cantanti Opera, Goro (<em>Madama Butterfly</em>) 
 			and First Officer (<em>Thérèse</em>) with Sarasota Opera, Ramiro, Ferrando (<em>Così fan tutte</em>), and Le Remendado (<em>Carmen</em>) with 
 			Fargo-Moorhead Opera, Bardolfo (<em>Falstaff</em>) with Crested Butte Music Festival, Stevie and Professor 
 			Scoot (<em>The Cradle will Rock</em>) with Opera Saratoga, Pluton and Orphée (<em>Orphée aux Enfers</em>), 
